force-app/main/default/objects/Wealth_Indicator__c/Wealth_Indicator__c.object-meta.xml
<CustomObject>
    <label>Wealth Indicator</label>
    <nameField>
        <displayFormat>WI-{0000000}</displayFormat>
        <label>Wealth Indicator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wealth Indicators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>