force-app/main/default/objects/Wealth_Indicator__c/fields/Asset_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Asset_Last_Update__c</fullName>
    <label>Asset Last Update</label>
    <type>Date</type>
</CustomField>