force-app/main/default/objects/Wealth_Indicator__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Wealth Indicators</relationshipLabel>
    <relationshipName>Wealth_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>