force-app/main/default/objects/Wealth_Indicator__c/fields/Constituent__c.field-meta.xml
<CustomField>
    <fullName>Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Wealth Indicators</relationshipLabel>
    <relationshipName>Wealth_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>