force-app/main/default/objects/Wealth_Indicator__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this field is blank, it will automatically populate with the Household of the Wealth Rating.</inlineHelpText>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Wealth Indicators</relationshipLabel>
    <relationshipName>Wealth_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>