force-app/main/default/objects/Wealth_Indicator__c/fields/Wealth_Asset__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wealth Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Wealth_Asset__c.Organization__c</field>
            <operation>equals</operation>
            <valueField>$Source.Organization__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Wealth_Asset__c</referenceTo>
    <relationshipLabel>Wealth Indicators</relationshipLabel>
    <relationshipName>Wealth_Indicators</relationshipName>
    <type>Lookup</type>
</CustomField>