force-app/main/default/objects/Wealth_Indicator__c/fields/Wealth_Asset_Category__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Asset_Category__c</fullName>
    <formula>TEXT(Wealth_Asset__r.Category__c)</formula>
    <label>Wealth Asset Category</label>
    <type>Text</type>
</CustomField>